--- a/app/src/main/res/drawable/btn_menu.xml
+++ b/app/src/main/res/drawable/btn_menu.xml
@@ -1,4 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
 
-</selector>
+    <!-- กำหนดสีพื้นหลัง -->
+    <solid android:color="#FFFFFF" />
+
+    <!-- กำหนดสีเส้นขอบ -->
+    <stroke
+        android:width="2dp"
+        android:color="#FFFFFF" />
+
+    <!-- กำหนดเหลี่ยมมุม -->
+    <corners
+        android:radius="10dp" />
+</shape>
