--- a/app/src/main/res/layout/activity_selecter_payment_ladder.xml
+++ b/app/src/main/res/layout/activity_selecter_payment_ladder.xml
@@ -15,14 +15,14 @@
         android:background="@drawable/rounded_edittext"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.42"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.815" />
+        app:layout_constraintVertical_bias="0.682" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="303dp"
+        android:layout_width="304dp"
         android:layout_height="45dp"
         android:background="@drawable/rounded_blue"
         android:text="เงินได้"
@@ -30,107 +30,133 @@
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.411"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.303" />
+        app:layout_constraintTop_toTopOf="@+id/textView4"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/button2"
+    <TextView
+        android:id="@+id/tvBtn"
         android:layout_width="303dp"
-        android:layout_height="52dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.62"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.064" />
-
-    <Button
-        android:id="@+id/button7"
-        android:layout_width="303dp"
-        android:layout_height="52dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.755" />
-
-    <Button
-        android:id="@+id/button6"
-        android:layout_width="303dp"
-        android:layout_height="52dp"
-        android:text="sdasdasd"
+        android:layout_height="50dp"
+        android:text="ไม่เกิน 150,000 บาท"
+        android:textAlignment="center"
         android:textColor="#000000"
-        android:background="#FFFFFF"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.372" />
+        app:layout_constraintTop_toBottomOf="@+id/textView7"
+        app:layout_constraintVertical_bias="0.056" />
 
-    <Button
-        android:id="@+id/button8"
+    <TextView
+        android:id="@+id/tvBtn2"
         android:layout_width="303dp"
-        android:layout_height="52dp"
-        android:background="#FFFFFF"
-        android:text="Button"
+        android:layout_height="50dp"
+        android:text="150,001-300,000 บาท"
+        android:textAlignment="center"
         android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.525" />
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/button9"
+    <TextView
+        android:id="@+id/tvBtn3"
         android:layout_width="303dp"
-        android:layout_height="52dp"
-        android:text="Button"
-        android:background="#FFFFFF"
+        android:layout_height="50dp"
+        android:text="300,001-500,000 บาท"
+        android:textAlignment="center"
         android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.416"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.602" />
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn2"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/button10"
+    <TextView
+        android:id="@+id/tvBtn4"
         android:layout_width="303dp"
-        android:layout_height="52dp"
-        android:text="Button"
+        android:layout_height="50dp"
+        android:text="500,001-750,000 บาท"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.832" />
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn3"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/button11"
+    <TextView
+        android:id="@+id/tvBtn5"
         android:layout_width="303dp"
-        android:layout_height="52dp"
-        android:text="Button"
+        android:layout_height="50dp"
+        android:text="750,001-1,000,000 บาท"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.425"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.678" />
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn4"
+        app:layout_constraintVertical_bias="0.0" />
 
-    <Button 
-    android:id="@+id/button5"
-    android:layout_width="303dp"
-    android:layout_height="52dp"
-    android:background="#C62C2C"
-    android:text="Button"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintVertical_bias="0.449" />
+    <TextView
+        android:id="@+id/tvBtn6"
+        android:layout_width="303dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="180dp"
+        android:text="1,000,001-2,000,000 บาท"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.425"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn5"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <TextView
+         android:id="@+id/tvBtn7"
+        android:layout_width="303dp"
+        android:layout_height="50dp"
+ 
+        android:text="2,000,000-5,000,000 บาท"
+
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.416"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn6"
+        app:layout_constraintVertical_bias="0.0" 
+        />
+
+    <TextView
+        android:id="@+id/tvBtn8"
+        android:layout_width="303dp"
+        android:layout_height="50dp"
+       android:text="มากกว่า 5,000,000 บาท"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.416"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn7"
+        app:layout_constraintVertical_bias="0.0"  />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
