--- a/app/src/main/res/layout/activity_get_user_name.xml
+++ b/app/src/main/res/layout/activity_get_user_name.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#a0bff6"
-    tools:context=".MainActivity2">
+    tools:context=".getUserName">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
