--- a/app/src/main/res/drawable/rounded_white.xml
+++ b/app/src/main/res/drawable/rounded_white.xml
@@ -1,14 +1,14 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle">
 
-        <solid android:color="#144294" />
+        <solid android:color="#ffffff" />
 
         <stroke
             android:width="1dp"
-            android:color="#144294" />
+            android:color="#ffffff" />
 
         <corners
-            android:radius="10dp" />
+            android:radius="15dp" />
 
         <padding
             android:bottom="10dp"
