--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,5 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/</item>
         <item>@font/montserrat_light</item>
+        <item>@font/montserrat_medium</item>
+        <item>@font/montserrat_semibold</item>
     </array>
 </resources>
