--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,36 @@
     android:layout_height="match_parent"
     android:background="#a0bff6"
     tools:context=".fragments.Home">
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="377dp"
+        android:layout_height="75dp"
+        android:fontFamily="@font/bebas_neue"
+        android:gravity="center_vertical|center"
+        android:text="แอปพลิเคชั่นสำหรับคิดคำนวณภาษี\nทั้งแบบขั้นบันได และเเบบเหมา"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.47"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        app:layout_constraintVertical_bias="0.053" />
+
+    <Button
+        android:id="@+id/startedBtn"
+        android:layout_width="263dp"
+        android:layout_height="60dp"
+        android:onClick="payStepLadder"
+        android:text="เริ่มต้น"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView6"
+        app:layout_constraintVertical_bias="0.18" />
+
     <TextView
         android:id="@+id/textView3"
         android:layout_width="142dp"
@@ -16,63 +46,9 @@
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.071" />
+        app:layout_constraintVertical_bias="0.295" />
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="223dp"
-        android:layout_height="48dp"
-        android:fontFamily="@font/bebas_neue"
-        android:text="คำนวณภาษีกับ Easy Tax"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.162" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="240dp"
-        android:layout_height="49dp"
-        android:fontFamily="@font/bebas_neue"
-        android:text="คิดภาษีเงินได้ส่วนบุคคล"
-        android:textColor="#ffffff"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.288" />
-
-    <Button
-        android:id="@+id/button3"
-        android:layout_width="263dp"
-        android:layout_height="60dp"
-        android:onClick="payStepLadder"
-        android:text="แบบขั้นบันได"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.537" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="255dp"
-        android:layout_height="60dp"
-        android:onClick="flatPaymentClick"
-        android:text="แบบเหมา"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.665" />
 </androidx.constraintlayout.widget.ConstraintLayout>
