--- a/app/src/main/res/layout/fragment_progressive_tax.xml
+++ b/app/src/main/res/layout/fragment_progressive_tax.xml
@@ -9,153 +9,144 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="304dp"
-        android:layout_height="476dp"
+        android:layout_width="250dp"
+        android:layout_height="500dp"
         android:background="@drawable/rounded_edittext"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.42"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.682" />
+        app:layout_constraintVertical_bias="0.377" />
 
     <TextView
         android:id="@+id/textView7"
-        android:layout_width="304dp"
+        android:layout_width="250dp"
         android:layout_height="45dp"
         android:background="@drawable/rounded_blue"
-        android:text="เงินได้"
-        android:textAlignment="center"
+        android:text="เงินได้สุทธิ"
+        android:gravity="center_vertical|center"
         android:textColor="#ffffff"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.411"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toTopOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/tvBtn"
-        android:layout_width="303dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_marginTop="4dp"
         android:text="ไม่เกิน 150,000 บาท"
-        android:textAlignment="center"
+        android:gravity="center_vertical|center"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7"
-        app:layout_constraintVertical_bias="0.056" />
-
-    <TextView
-        android:id="@+id/tvBtn2"
-        android:layout_width="303dp"
-        android:layout_height="50dp"
-        android:text="150,001-300,000 บาท"
-        android:textAlignment="center"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBtn"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
     <TextView
         android:id="@+id/tvBtn3"
-        android:layout_width="303dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_marginTop="4dp"
         android:text="300,001-500,000 บาท"
-        android:textAlignment="center"
+        android:gravity="center_vertical|center"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.416"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBtn2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn2" />
 
     <TextView
         android:id="@+id/tvBtn4"
-        android:layout_width="303dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_marginTop="4dp"
         android:text="500,001-750,000 บาท"
-        android:textAlignment="center"
+        android:gravity="center_vertical|center"
         android:textColor="#000000"
+
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBtn3"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn3" />
 
     <TextView
         android:id="@+id/tvBtn5"
-        android:layout_width="303dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_marginTop="4dp"
         android:text="750,001-1,000,000 บาท"
-        android:textAlignment="center"
+        android:gravity="center_vertical|center"
         android:textColor="#000000"
+
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBtn4"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn4" />
 
     <TextView
         android:id="@+id/tvBtn6"
-        android:layout_width="303dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="180dp"
+        android:layout_marginTop="4dp"
         android:text="1,000,001-2,000,000 บาท"
-        android:textAlignment="center"
+        android:gravity="center_vertical|center"
         android:textColor="#000000"
+
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.425"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBtn5"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.398"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn5" />
 
     <TextView
         android:id="@+id/tvBtn7"
-        android:layout_width="303dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
 
-        android:text="2,000,000-5,000,000 บาท"
+        android:layout_marginTop="4dp"
 
-        android:textAlignment="center"
+        android:text="2,000,000-5,000,000 บาท"
+        android:gravity="center_vertical|center"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.416"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBtn6"
-        app:layout_constraintVertical_bias="0.0"
-        />
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.481"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn6" />
 
     <TextView
         android:id="@+id/tvBtn8"
-        android:layout_width="303dp"
+        android:layout_width="250dp"
         android:layout_height="50dp"
+        android:layout_marginTop="4dp"
         android:text="มากกว่า 5,000,000 บาท"
-        android:textAlignment="center"
+        android:gravity="center_vertical|center"
         android:textColor="#000000"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.416"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvBtn7"
-        app:layout_constraintVertical_bias="0.0"  />
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn7" />
+
+    <TextView
+        android:id="@+id/tvBtn2"
+        android:layout_width="250dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="4dp"
+        android:text="150,001-300,000 บาท"
+        android:gravity="center_vertical|center"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@+id/textView4"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/tvBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
