--- a/app/src/main/res/layout/fragment_result_tax.xml
+++ b/app/src/main/res/layout/fragment_result_tax.xml
@@ -24,6 +24,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
+        android:textStyle="bold"
         android:text="สรุปรายละเอียดภาษีของ"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.077"
@@ -60,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="อัตราภาษี"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -71,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="ประเภท"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.082"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -82,6 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="รายละเอียดการเงิน"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.111"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -93,6 +97,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="รายรับ"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.08"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -104,6 +109,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="รายจ่าย"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -115,6 +121,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="ค่าลดหย่อน"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.086"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -126,6 +133,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="รวมเป็นเงินสุทธิ"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="@+id/textView"
@@ -137,6 +145,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="จะต้องเสียภาษี"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.093"
         app:layout_constraintStart_toStartOf="@+id/textView"
